# SD_Controller

./: README.md  app.js  package-lock.json  package.json  redis_keys.md
Database_Service/: CMakeLists.txt  README.md  database.service  main.cpp  migrations.json  table_schema.json
Database_Service/cmake/: Findsqlite3.cmake
PLC_Service/: README.md  main.py  plc.service
SignalR_Service/: README.md  app.js  package-lock.json  package.json  signalr.service
SignalR_Service/config/: config.json
SignalR_Service/services/: api_service.js  signalR_service.js
config/: config.json
services/: api_service.js  signalR_service.js
